argo-cd/argocd-internet.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd.roelvandegrint.com
  annotations:
    cert-manager.io/issuer: letsencrypt-production-http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - argocd.roelvandegrint.com
      secretName: argocd-ingress-http-production
  rules:
    - host: argocd.roelvandegrint.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
